@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
+		xmlns="http://maven.apache.org/POM/4.0.0"
+		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
 >
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.avereon.pom</groupId>
-    <artifactId>mod</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>com.avereon.pom</groupId>
+		<artifactId>mod</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+	</parent>
 
 	<groupId>com.avereon</groupId>
 	<artifactId>mazer</artifactId>
@@ -23,11 +23,28 @@
 	<description>Xenon mod that implements maze solving algorithms</description>
 	<inceptionYear>2019</inceptionYear>
 
-  <repositories>
-    <repository>
-      <id>avn</id>
-      <url>https://repo.avereon.com/avn</url>
-    </repository>
-  </repositories>
+	<repositories>
+		<repository>
+			<id>avn</id>
+			<url>https://repo.avereon.com/avn</url>
+		</repository>
+	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<!-- Version comes from parent -->
+				<configuration>
+					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
+					<argLine>
+						--add-opens=com.avereon.mazer/com.avereon.mazer=ALL-UNNAMED
+						--add-opens=com.avereon.mazer/com.avereon.mazer.asset=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
